--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
         <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
         <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
         <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
+        <maven-help-plugin.version>3.5.1</maven-help-plugin.version>
     </properties>
 
     <organization>
@@ -221,6 +222,11 @@
                     <reuseForks>false</reuseForks>
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-help-plugin</artifactId>
+                <version>${maven-help-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
