--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,13 +22,12 @@ jobs:
       - name: Install native-image tool
         run: gu install native-image
 
-      - name: Set up JReleaser
-        uses: jreleaser/setup-jreleaser@v1
-        with:
-          version: latest
-
-      - name: Build with Maven
-        run: mvn -B clean package
+      - name: Setup JReleaser CLI
+        run: |
+          curl -sL https://github.com/jreleaser/jreleaser/releases/latest/download/jreleaser-cli-linux-amd64.tar.gz -o jreleaser.tar.gz
+          tar -xzf jreleaser.tar.gz
+          sudo mv jreleaser-cli/bin/jreleaser /usr/local/bin/jreleaser
+          sudo chmod +x /usr/local/bin/jreleaser
 
       - name: Run JReleaser Full Release
         env:
