--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,32 +1,36 @@
-name: Release Native Image
+name: release
 
 on:
-  release:
-    types: [ published ]
+  workflow_dispatch:
 
 jobs:
-  build:
+  release:
+    name: Release
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Setup Graal
-        uses: graalvm/setup-graalvm@v1
         with:
-          java-version: '17'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          distribution: 'graalvm-community'
-          components: 'native-image'
+          fetch-depth: 0
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'zulu'
           cache: maven
 
-      - name: Setup JReleaser CLI
-        run: |
-          curl -sL https://github.com/jreleaser/jreleaser/releases/latest/download/jreleaser-cli-linux-amd64.tar.gz | tar xz -C /usr/local/bin --strip-components=1 jreleaser-cli/bin/jreleaser
-          chmod +x /usr/local/bin/jreleaser
-
-      - name: Run JReleaser Full Release
+      - name: Run JReleaser
+        uses: jreleaser/release-action@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: jreleaser full-release
+          JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: JReleaser release output
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: jreleaser-release
+          path: |
+            out/jreleaser/trace.log
+            out/jreleaser/output.properties
