--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,19 +19,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      #      - name: Setup Java
-      #        uses: actions/setup-java@v4
-      #        with:
-      #          java-version: 17
-      #          distribution: 'zulu'
-      #          cache: maven
-
-      - name: Setup Graal
-        uses: graalvm/setup-graalvm@v1
+      - name: Setup Java
+        uses: actions/setup-java@v4
         with:
-          distribution: 'graalvm'
-          java-version: '17'
-          cache: 'native-image'
+          java-version: 17
+          distribution: 'zulu'
+          cache: maven
+
+      - name: Build with Maven
+        run: mvn -B clean package --file pom.xml -DskipTests
 
       - name: Run JReleaser
         uses: jreleaser/release-action@v2
