--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,9 @@ jobs:
           java-version: '17'
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Install native-image
+        run: gu install native-image
+
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4
         with:
