ci: Add jreleaser action
Signed-off-by: unknowIfGuestInDream <liang.tang.cx@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,15 @@
                                 <buildArg>--verbose</buildArg>
                             </buildArgs>
                         </configuration>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>compile</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
