--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -22,6 +22,7 @@ jobs:
           distribution: 'graalvm'
           java-version: '17'
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          native-image-job-reports: 'true'
       - name: Show environment
         run: |
           echo "OS: ${{ matrix.os }}"
