ci: Add jreleaser action
Signed-off-by: unknowIfGuestInDream <liang.tang.cx@gmail.com>

--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -42,4 +42,7 @@ jobs:
         with:
           name: native-image-${{ matrix.os }}
           path: |
-            *
+            target/*.exe
+            target/*.bin
+            target/*.app
+            target/*
