ci: Add jreleaser action
Signed-off-by: unknowIfGuestInDream <liang.tang.cx@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,9 @@
                             <execution>
                                 <id>build-native</id>
                                 <phase>package</phase>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
                             </execution>
                         </executions>
                     </plugin>
