--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -40,6 +40,6 @@ jobs:
       - name: Upload native image artifact
         uses: actions/upload-artifact@v4
         with:
-          name: native-image-${{ matrix.os }}
+          name: windowMonitor-${{ matrix.os }}
           path: |
             target/native/*
